# tello-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TelloControl/: CMakeLists.txt
TelloControl/inc/: NetworkConnect.h  TelloControl.h
TelloControl/src/: NetworkConnect.cpp  TelloControl.cpp
TelloControl/test/: CMakeLists.txt  TestMain.cpp
TelloControl/test/TelloControl/: CommandTests.cpp
_build/: linux-generate.sh
inc/api/: telloc.h  telloc_config.h  telloc_types.h
src/: TelloControl.cpp  telloc_instance_internal.cpp  telloc_instance_internal.h
src/api/: telloc.cpp  telloc_config.cpp  telloc_config_internal.cpp  telloc_config_internal.h
src/udp/: client.cpp  client.h  server.cpp  server.h
test/: CMakeLists.txt  main.cpp
test/tests/: ConfigTests.cpp  ConfigurationApiTests.cpp
